--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    background-color: ghostwhite
+}
 img {
     width: 20%;
 }
@@ -17,12 +20,24 @@ body {
 
 .container {
     display: flex;
+    flex-wrap: wrap;
+    background-color: lightgra;
+    
+}
+
+.flex-ad {
+    display: flex;
+    flex-direction: wrap;
+    width: 100em;
+    height: auto; 
+    margin: 40px;
 }
 
 .a-flex {
-    border: solid 2px pink;
+    background-color: white;
     display: flex;
-    width: 30%;
+    flex-wrap: wrap;
+    width: 270px;
     height: auto; 
     margin: 40px;
 }
@@ -67,8 +82,24 @@ body {
 }
 
 .logo {
-    width: 10px;
+    width: 25px;
    display: absolute;
+}
 
+.photo-story {
+    width:100%; 
+}
+
+.author-pics {
+    width: 70px;
+    height: auto;
+    border-radius: 100%;
+
+}
+
+.author {
+    color: gray;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
