--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-*{
-    background-color: ghostwhite
-}
+
 img {
     width: 20%;
 }
@@ -14,23 +12,11 @@ a:link {
     color: black;
 }
 
-body {
-    background-color: lightgray;
-}
-
 .container {
     display: flex;
     flex-wrap: wrap;
-    background-color: lightgra;
+    background-color: #f7f7f7;
     
-}
-
-.flex-ad {
-    display: flex;
-    flex-direction: wrap;
-    width: 100em;
-    height: auto; 
-    margin: 40px;
 }
 
 .a-flex {
